# websocket-shootout

./: .gitmodules  LICENSE  Makefile  README.md
clojure/httpkit/: .gitignore  README.md  boot.properties  build.boot
cpp/: .gitignore  README.md
cpp/bench/: Makefile  README.md
cpp/bench/src/: main.cpp
cpp/crow/: Makefile  README.md
cpp/crow/src/: server.cpp  shared_mutex.hpp
cpp/msvc/cpp-websocket-server/: cpp-websocket-server.vcxproj  cpp-websocket-server.vcxproj.filters
cpp/src/: main.cpp  server.cpp  server.h
cpp/uwebsockets/: Makefile  README.md
cpp/uwebsockets/src/: binary_server.cpp  binary_server.h  main.cpp  server.cpp  server.h
cpp/websocketpp/: Makefile  README.md
cpp/websocketpp/src/: binary_server.cpp  binary_server.h  json_server.cpp  main.cpp  server.cpp
elixir/phoenix_socket/: README.md  mix.exs
elixir/phoenix_socket/config/: config.exs  dev.exs  prod.exs  test.exs
elixir/phoenix_socket/lib/: phoenix_socket.ex
elixir/phoenix_socket/test/: test_helper.exs
elixir/phoenix_socket/web/: gettext.ex  router.ex  web.ex
elixir/plug_socket/: README.md  mix.exs
elixir/plug_socket/config/: config.exs
elixir/plug_socket/lib/: plug_socket.ex
erlang/cowboy/: .gitignore  Changelog.md  LICENSE  Readme.md  rebar.config
erlang/cowboy/files/: app.config
go/: README.md
haskell/: .gitignore  LICENSE  hs-websocket-server.cabal  stack.yaml
haskell/src/: Main.hs
haskell/transient/: ChangeLog.md  LICENSE  Main.hs  hasrocket-benchmark-transient.cabal
haskell/warp/: Main.hs  MainNoChan.hs  README.md  stack.yaml  ws-server.cabal
java/: .gitignore  settings.gradle
java/netty/: README.md  build.gradle
java/undertow/: README.md  build.gradle
js/: README.md  package.json  run-cluster.js
js/faye/: index.js
js/uws/: index.js  package.json
js/ws/: index.js  package.json
js/ws-bench/: index.js
results/: round-01.md  round-02-binary.md  round-02-extras.md  round-02.md
ruby/action-cable-server/: Gemfile  README.md
ruby/agoo/: Gemfile  README.md  config.ru  shooter.rb  shootout.rb
ruby/event-machine/: Gemfile  server.rb
ruby/faye-websocket/: Gemfile  config.ru  crash.out  server.rb
ruby/iodine/: config.ru
ruby/plezi-iodine/: Gemfile  config.ru
rust/: Cargo.toml
rust/src/: main.rs  mioco_ws.rs  scopedpool_ws.rs  single_threaded_ws.rs  threadpool_ws.rs
(+81 files in other folders)
