name:                hs-websocket-server
version:             0.1.0.0
synopsis:            Websocket server benchmark
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2016 Chris Allen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hs-websocket-server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , unagi-chan
                     , containers
                     , http-types
                     , lens
                     , lens-aeson
                     , raw-strings-qq
                     , stm
                     , stm-containers
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets
