name:                ws-server
version:             0.1.0.0
synopsis:            Websocket benchmark
description:         Please see ../../README.md
homepage:            https://github.com/hashrocket/websocket-shootout
license:             MIT
author:              Jakub Śpiewak
maintainer:          j.m.spiewak@gmail.com
copyright:           2016 Jakub Śpiewak
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-warp-ws-server
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N -A64m -n2m"

  build-depends:       aeson,
                       base,
                       classy-prelude,
                       http-types,
                       unagi-chan,
                       unordered-containers,
                       wai,
                       wai-websockets,
                       warp,
                       websockets
